--- a/Python Fundamentals and Programming.ipynb
+++ b/Python Fundamentals and Programming.ipynb
@@ -74,11 +74,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "straight-faith",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The arguments should match: 1 == 1 and 2 == 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Positional arguments\n",
+    "\n",
+    "def only_positional(a, b):\n",
+    "    return a,b\n",
+    "\n",
+    "a, b = only_positional(1, 2)\n",
+    "\n",
+    "print(\"The arguments should match: 1 == {} and 2 == {}\".format(a,b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "latest-seattle",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The arguments should match: 1 == 1 and 2 == 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Optional arguments\n",
+    "\n",
+    "def positional_optional(a, b=2):\n",
+    "    return a,b\n",
+    "\n",
+    "a, b = positional_optional(1)\n",
+    "\n",
+    "print(\"The arguments should match: 1 == {} and 2 == {}\".format(a,b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "single-lover",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The arguments should match: 1 == 1 and 3 == 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Optional arguments\n",
+    "\n",
+    "def positional_optional(a, b=3):\n",
+    "    return a,b\n",
+    "\n",
+    "a, b = positional_optional(1, b=3)\n",
+    "\n",
+    "print(\"The arguments should match: 1 == {} and 3 == {}\".format(a,b))"
+   ]
   },
   {
    "cell_type": "markdown",
