--- a/Python Fundamentals and Programming.ipynb
+++ b/Python Fundamentals and Programming.ipynb
@@ -143,11 +143,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "hairy-insured",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The type should be a list: <class 'list'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Simple comprehensions\n",
+    "\n",
+    "### This sintax creates a list\n",
+    "\n",
+    "list_comprenhension = [i**2 for i in range(10)]\n",
+    "\n",
+    "print(\"The type should be a list: {}\".format(type(list_comprenhension)))\n",
+    "\n",
+    "list_comprenhension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "moderate-compromise",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The type should be a gen: <class 'generator'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<generator object <genexpr> at 0x7f37a0219190>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### This sintax creates a generator\n",
+    "\n",
+    "generator_comprenhension = (i**2 for i in range(10))\n",
+    "\n",
+    "print(\"The type should be a generator: {}\".format(type(generator_comprenhension)))\n",
+    "\n",
+    "generator_comprenhension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "moving-journey",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The type should be a generator: <class 'list'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## https://stackoverflow.com/questions/18072759/list-comprehension-on-a-nested-list\n",
+    "\n",
+    "### Nested comprenhesion\n",
+    "\n",
+    "nested_comprenhension = [j**0.5 for j in [i**2 for i in range(10)]]\n",
+    "\n",
+    "print(\"The type should be a list: {}\".format(type(nested_comprenhension)))\n",
+    "\n",
+    "nested_comprenhension"
+   ]
   },
   {
    "cell_type": "markdown",
